--- a/2index.html
+++ b/2index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoSphere: Urban Microclimate Control System</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style2.css">
 </head>
 <body>
-    <!-- Header -->
     <header class="bg-dark text-white text-center py-5" style="background-image: url('cityscape.jpg'); background-size: cover; background-position: center;">
         <div class="container">
             <h1>EcoSphere: Urban Microclimate Control System</h1>
@@ -17,30 +16,6 @@
         </div>
     </header>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">EcoSphere</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="#introduction">Introduction</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#problem">The Problem</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#solution">Solution</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#implementation">Implementation</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#preincubation">Preincubation</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience">Team Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#impact">Societal Impact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#conclusion">Conclusion</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Introduction Section -->
     <section id="introduction" class="py-5">
         <div class="container">
             <h2 class="text-center">Introduction</h2>
@@ -48,7 +23,6 @@
         </div>
     </section>
 
-    <!-- Problem Section -->
     <section id="problem" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">The Problem</h2>
@@ -63,7 +37,6 @@
         </div>
     </section>
 
-    <!-- Solution Section -->
     <section id="solution" class="py-5">
         <div class="container">
             <h2 class="text-center">EcoSphere Solution</h2>
@@ -71,46 +44,38 @@
         </div>
     </section>
 
-    <!-- Features Section -->
     <section id="features" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">Features</h2>
             <div class="row">
                 <div class="col-md-6">
                     <h3>Reducing Urban Heat Islands</h3>
-                    <p>Smart Green Roofs and Walls with sensor monitoring for optimal performance.</p>
-                    <img src="green_roof.jpg" alt="Green Roof" class="img-fluid">
+                    <p>Smart Green Roofs and Walls with sensor monitoring for optimal performance. Benefits: Reduced surface temperatures, lower cooling costs.</p>
                 </div>
                 <div class="col-md-6">
                     <h3>Improving Air Quality</h3>
-                    <p>Solar-Powered Air Purifiers with advanced filtration and ionization technologies.</p>
-                    <img src="air_purifier.jpg" alt="Air Purifier" class="img-fluid">
+                    <p>Solar-Powered Air Purifiers with advanced filtration and ionization technologies. Benefits: Reduced pollutants, improved respiratory health.</p>
                 </div>
                 <div class="col-md-6">
                     <h3>Efficient Water Management</h3>
-                    <p>Rainwater Harvesting Systems and Smart irrigation systems.</p>
-                    <img src="water_management.jpg" alt="Water Management" class="img-fluid">
+                    <p>Rainwater Harvesting Systems and Smart irrigation systems. Benefits: Efficient water use, reduced flooding.</p>
                 </div>
                 <div class="col-md-6">
                     <h3>Supporting Biodiversity</h3>
-                    <p>Biodiversity-Friendly Landscaping with AI-driven monitoring systems.</p>
-                    <img src="biodiversity.jpg" alt="Biodiversity" class="img-fluid">
+                    <p>Biodiversity-Friendly Landscaping with AI-driven monitoring systems. Benefits: Supports local wildlife, improves urban aesthetics.</p>
                 </div>
                 <div class="col-md-6">
                     <h3>Reducing Energy Consumption</h3>
-                    <p>Energy-Efficient Building Systems with IoT devices for real-time optimization.</p>
-                    <img src="energy_efficiency.jpg" alt="Energy Efficiency" class="img-fluid">
+                    <p>Energy-Efficient Building Systems with IoT devices for real-time optimization. Benefits: Reduced energy consumption, lower emissions.</p>
                 </div>
                 <div class="col-md-6">
                     <h3>Community Engagement</h3>
-                    <p>Community Engagement Platforms with real-time environmental data and educational content.</p>
-                    <img src="community_engagement.jpg" alt="Community Engagement" class="img-fluid">
+                    <p>Community Engagement Platforms with real-time environmental data and educational content. Benefits: Increased public awareness and participation.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Implementation Section -->
     <section id="implementation" class="py-5">
         <div class="container">
             <h2 class="text-center">Implementation Strategy</h2>
@@ -124,7 +89,6 @@
         </div>
     </section>
 
-    <!-- Preincubation Section -->
     <section id="preincubation" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">Preincubation Phase</h2>
@@ -132,7 +96,6 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
     <section id="experience" class="py-5">
         <div class="container">
             <h2 class="text-center">Team Experience</h2>
@@ -140,7 +103,6 @@
         </div>
     </section>
 
-    <!-- Impact Section -->
     <section id="impact" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">Societal Impact</h2>
@@ -155,7 +117,6 @@
         </div>
     </section>
 
-    <!-- Conclusion Section -->
     <section id="conclusion" class="py-5">
         <div class="container">
             <h2 class="text-center">Conclusion</h2>
@@ -163,14 +124,14 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2024 EcoSphere. All rights reserved.</p>
+        <div class="container">
+            <p>© 2024 Green Innovators. All rights reserved.</p>
+        </div>
     </footer>
 
-    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
