--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-md-6">
                     <h3>Reducing Urban Heat Islands</h3>
                     <p>Smart Green Roofs and Walls with sensor monitoring for optimal performance.</p>
-                    <img src="green_roof.jpg" alt="Green Roof" class="img-fluid">
+                    <img src="./Assets/Green roof.jpeg" alt="Green Roof" class="img-fluid">
                 </div>
                 <div class="col-md-6">
                     <h3>Improving Air Quality</h3>
@@ -89,7 +89,7 @@
                 <div class="col-md-6">
                     <h3>Efficient Water Management</h3>
                     <p>Rainwater Harvesting Systems and Smart irrigation systems.</p>
-                    <img src="water_management.jpg" alt="Water Management" class="img-fluid">
+                    <img src="./Assets/water_management.jpg" alt="Water Management" class="img-fluid">
                 </div>
                 <div class="col-md-6">
                     <h3>Supporting Biodiversity</h3>
