added images and refrences to bottom

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <!-- Header -->
-    <header class="bg-dark text-white text-center py-5" style="background-image: url('cityscape.jpg'); background-size: cover; background-position: center;">
+    <header class="bg-dark text-white text-center py-5"
+        style="background-image: url('cityscape.jpg'); background-size: cover; background-position: center;">
         <div class="container">
             <h1>EcoSphere: Urban Microclimate Control System</h1>
             <h2>An Innovative Approach to Urban Sustainability</h2>
@@ -21,7 +24,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">EcoSphere</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -44,7 +48,9 @@
     <section id="introduction" class="py-5">
         <div class="container">
             <h2 class="text-center">Introduction</h2>
-            <p class="text-center">EcoSphere is an innovative concept developed in the preincubation phase. Guided by a dedicated mentor, our team leverages online resources to tackle urban sustainability challenges with a limited budget.</p>
+            <p class="text-center">EcoSphere is an innovative concept developed in the preincubation phase. Guided by a
+                dedicated mentor, our team leverages online resources to tackle urban sustainability challenges with a
+                limited budget.</p>
         </div>
     </section>
 
@@ -67,7 +73,8 @@
     <section id="solution" class="py-5">
         <div class="container">
             <h2 class="text-center">EcoSphere Solution</h2>
-            <p>EcoSphere integrates smart green infrastructure, renewable energy technologies, and community engagement to address multiple urban environmental challenges holistically.</p>
+            <p>EcoSphere integrates smart green infrastructure, renewable energy technologies, and community engagement
+                to address multiple urban environmental challenges holistically.</p>
         </div>
     </section>
 
@@ -89,7 +96,7 @@
                 <div class="col-md-6">
                     <h3>Efficient Water Management</h3>
                     <p>Rainwater Harvesting Systems and Smart irrigation systems.</p>
-                    <img src="./Assets/water_management.jpg" alt="Water Management" class="img-fluid">
+                    <a href="https://www.sciencedirect.com/science/article/pii/S258972172030012X"><img src="./Assets/water_management.jpg" alt="Water Management" class="img-fluid"></a>
                 </div>
                 <div class="col-md-6">
                     <h3>Supporting Biodiversity</h3>
@@ -99,7 +106,7 @@
                 <div class="col-md-6">
                     <h3>Reducing Energy Consumption</h3>
                     <p>Energy-Efficient Building Systems with IoT devices for real-time optimization.</p>
-                    <img src="energy_efficiency.jpg" alt="Energy Efficiency" class="img-fluid">
+                    <a href="https://www.mdpi.com/1424-8220/20/11/3155"><img src="./Assets/energy_efficiency.png" alt="Energy Efficiency" class="img-fluid"></a>
                 </div>
                 <div class="col-md-6">
                     <h3>Community Engagement</h3>
@@ -128,7 +135,8 @@
     <section id="preincubation" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">Preincubation Phase</h2>
-            <p>Using online courses and resources for research. Receiving mentorship guidance. Building low-cost prototypes. Conducting small pilot projects.</p>
+            <p>Using online courses and resources for research. Receiving mentorship guidance. Building low-cost
+                prototypes. Conducting small pilot projects.</p>
         </div>
     </section>
 
@@ -136,7 +144,8 @@
     <section id="experience" class="py-5">
         <div class="container">
             <h2 class="text-center">Team Experience</h2>
-            <p>Expertise in environmental engineering, urban planning, and IT. Successful management of sustainability projects. Strong relationships with stakeholders and community groups.</p>
+            <p>Expertise in environmental engineering, urban planning, and IT. Successful management of sustainability
+                projects. Strong relationships with stakeholders and community groups.</p>
         </div>
     </section>
 
@@ -159,9 +168,30 @@
     <section id="conclusion" class="py-5">
         <div class="container">
             <h2 class="text-center">Conclusion</h2>
-            <p>EcoSphere offers significant environmental and societal benefits. We aim to refine and scale our concept with future support from mentors and officials. Thank you for your attention. Questions?</p>
+            <p>EcoSphere offers significant environmental and societal benefits. We aim to refine and scale our concept
+                with future support from mentors and officials. Thank you for your attention. Questions?</p>
         </div>
     </section>
+
+    <!-- Refrences -->
+    <section id="conclusion" class="py-5">
+        <div class="container">
+            <ul>
+                <h2 class="text-center">Refrences</h2>
+                <li>
+                    <a href="http://www.newdesignfile.com/post_green-roof-design-details_185028/">16 Green Roof Design
+                        Details Images</a>
+                </li>
+
+                <li><a href="https://www.sciencedirect.com/science/article/pii/S258972172030012X">Implementation of
+                        artificial intelligence in agriculture for optimisation of irrigation and application of
+                        pesticides and herbicides
+                        Author links open overlay panelTanha Talaviya a, Dhara Shah a, Nivedita Patel b, Hiteshri Yagnik
+                        c, Manan Shah d</a></li>
+            </ul>
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
@@ -173,4 +203,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
