idkd what i updated

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                 <div class="col-md-6">
                     <h3>Reducing Urban Heat Islands</h3>
                     <p>Smart Green Roofs and Walls with sensor monitoring for optimal performance.</p>
-                    <img src="./Assets/Green roof.jpeg" alt="Green Roof" class="img-fluid">
+                    <a href="http://www.newdesignfile.com/post_green-roof-design-details_185028/"> <img
+                            src="./Assets/Green roof.jpeg" alt="Green Roof" class="img-fluid"></a>
                 </div>
                 <div class="col-md-6">
                     <h3>Improving Air Quality</h3>
@@ -96,7 +97,9 @@
                 <div class="col-md-6">
                     <h3>Efficient Water Management</h3>
                     <p>Rainwater Harvesting Systems and Smart irrigation systems.</p>
-                    <a href="https://www.sciencedirect.com/science/article/pii/S258972172030012X"><img src="./Assets/water_management.jpg" alt="Water Management" class="img-fluid"></a>
+                    <a
+                        href="https://www.istockphoto.com/vector/rainwater-harvesting-system-isometric-diagram-gm1201105579-344307644"><img
+                            src="./Assets/water_management.jpg" alt="Water Management" class="img-fluid"></a>
                 </div>
                 <div class="col-md-6">
                     <h3>Supporting Biodiversity</h3>
@@ -106,7 +109,8 @@
                 <div class="col-md-6">
                     <h3>Reducing Energy Consumption</h3>
                     <p>Energy-Efficient Building Systems with IoT devices for real-time optimization.</p>
-                    <a href="https://www.mdpi.com/1424-8220/20/11/3155"><img src="./Assets/energy_efficiency.png" alt="Energy Efficiency" class="img-fluid"></a>
+                    <a href="https://www.mdpi.com/1424-8220/20/11/3155"><img src="./Assets/energy_efficiency.png"
+                            alt="Energy Efficiency" class="img-fluid"></a>
                 </div>
                 <div class="col-md-6">
                     <h3>Community Engagement</h3>
@@ -176,10 +180,10 @@
     <!-- Refrences -->
     <section id="conclusion" class="py-5">
         <div class="container">
-            <ul>
+            <ul class="Refrences">
                 <h2 class="text-center">Refrences</h2>
                 <li>
-                    <a href="http://www.newdesignfile.com/post_green-roof-design-details_185028/">16 Green Roof Design
+                    <a class="ref_links" href="http://www.newdesignfile.com/post_green-roof-design-details_185028/">16 Green Roof Design
                         Details Images</a>
                 </li>
 
