--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     <section id="introduction" class="py-5">
         <div class="container">
             <h2 class="text-center">Introduction</h2>
-            <p class="text-center">EcoSphere is an innovative concept developed in the preincubation phase. Guided by a
-                dedicated mentor, our team leverages online resources to tackle urban sustainability challenges with a
-                limited budget.</p>
+            <p class="text-center">EcoSphere is an innovative urban microclimate control system designed to address pressing environmental challenges faced by modern cities. Developed by the Green Innovators team during the preincubation phase, this project harnesses the power of smart green infrastructure, renewable energy technologies, and community engagement to create a sustainable urban environment. Guided by a dedicated mentor and utilizing online resources, our team has crafted a holistic solution that aims to reduce urban heat islands, improve air quality, manage water resources efficiently, support biodiversity, and enhance energy efficiency—all within a limited budget.</p><br>
+            <p class="text-center">EcoSphere's comprehensive approach integrates smart green roofs and walls, solar-powered air purifiers, advanced rainwater harvesting systems, biodiversity-friendly landscaping, and energy-efficient building systems. Additionally, it fosters community involvement through real-time environmental data sharing and educational content.</p><br>
+            <p class="text-center">The primary goal of EcoSphere is to mitigate the adverse effects of urbanization, such as poor air quality, water management issues, and loss of biodiversity. By leveraging cutting-edge technology and fostering community collaboration, EcoSphere aspires to create healthier, more resilient, and sustainable urban spaces that benefit both the environment and society.</p><br>
+            <p class="text-center">As a preincubation project, EcoSphere is currently in the early stages of development, with ongoing efforts to refine and scale the concept. With continued mentorship and support from environmental experts, urban planners, and stakeholders, EcoSphere has the potential to revolutionize urban sustainability and set a new standard for eco-friendly urban living.</p>
         </div>
     </section>
 
@@ -58,14 +59,18 @@
     <section id="problem" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">The Problem</h2>
-            <ul>
-                <li>Urban Heat Islands (UHIs)</li>
+            <ol>
+                <li>Urban Heat Islands (UHIs)
+                    <ul><li><strong>Description: </strong> Urban Heat Islands are areas within cities that experience significantly higher temperatures than their rural surroundings due to human activities and the concentration of buildings, roads, and other infrastructure that absorb and re-emit heat.</li></ul>
+                    
+                    <ul><li><strong>Impact</strong> Urban Heat Islands are areas within cities that experience significantly higher temperatures than their rural surroundings due to human activities and the concentration of buildings, roads, and other infrastructure that absorb and re-emit heat.</li></ul>
+                </li>
                 <li>Poor Air Quality</li>
                 <li>Water Management Issues</li>
                 <li>Loss of Biodiversity</li>
                 <li>High Energy Consumption</li>
                 <li>Lack of Public Awareness</li>
-            </ul>
+            </ol>
         </div>
     </section>
 
