--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                 and energy-efficient building systems. Additionally, it fosters community involvement through real-time
                 environmental data sharing and educational content.</p><br>
             <p class="text-center">The primary goal of EcoSphere is to mitigate the adverse effects of urbanization,
-                such as poor air quality, water management issues, and loss of biodiverslication</li>y. By leveraging cutting-edge
+                such as poor air quality, water management issues, and loss of biodiverslication</li>y. By leveraging
+                cutting-edge
                 technology and fostering community collaboration, EcoSphere aspires to create healthier, more resilient,
                 and sustainable urban spaces that benefit both the environment and society.</p><br>
             <p class="text-center">As a preincubation project, EcoSphere is currently in the early stages of
@@ -75,7 +76,7 @@
         <div class="container">
             <h2 class="text-center">The Problem</h2>
             <ol>
-                <li> <strong>Urban Heat Islands (UHIs)lication</strong> 
+                <li> <strong>Urban Heat Islands (UHIs)lication</strong>
                     <ul>
                         <li><strong>Description: </strong> Urban Heat Islands are areas within cities that experience
                             significantly higher temperatures than their rural surroundings due to human activities and
@@ -89,11 +90,58 @@
                             heat.</li>
                     </ul>
                 </li>
-                <li>Poor Air Quality</li>
-                <li>Water Management Issues</li>
-                <li>Loss of Biodiversity</li>
-                <li>High Energy Consumption</li>
-                <li>Lack of Public Awareness</li>
+
+                <li> <strong>Poor Air Quality</strong>
+                    <ul>
+                        <li><strong>Description: </strong>Cities often suffer from high levels of air pollution due to
+                            emissions from vehicles, industrial activities, and other sources.</li>
+                    </ul>
+                    <ul>
+                        <li><strong>Impact</strong> Poor air quality poses severe health risks, including respiratory
+                            and cardiovascular diseases, and contributes to environmental problems such as acid rain and
+                            global warming.
+                        </li>
+                    </ul>
+                </li>
+                <li> <strong>Water Management Issues</strong>
+                    <ul>
+                        <li><strong>Description: </strong>Urban areas face challenges in managing water resources
+                            effectively, including stormwater runoff, inefficient water use, and pollution of water
+                            bodies.</li>
+                    </ul>
+                    <ul>
+                        <li><strong>Impact</strong> Poor water management leads to flooding, water scarcity, degradation
+                            of water quality, and loss of aquatic ecosystems.
+                        </li>
+                    </ul>
+                </li>
+                <li> <strong>Loss of Biodiversity</strong>
+                    <ul>
+                        <li><strong>Description: </strong> Urbanization often results in the destruction of natural habitats, leading to a decline in local flora and fauna.</li>
+                    </ul>
+                    <ul>
+                        <li><strong>Impact</strong> The loss of biodiversity disrupts ecosystems, reduces resilience to environmental changes, and diminishes the quality of life for city inhabitants.
+                        </li>
+                    </ul>
+                </li>
+                <li> <strong>High Energy Consumption</strong>
+                    <ul>
+                        <li><strong>Description: </strong> Cities are major consumers of energy, primarily due to the demand for heating, cooling, lighting, and transportation.</li>
+                    </ul>
+                    <ul>
+                        <li><strong>Impact</strong> High energy consumption contributes to the depletion of natural resources, increases greenhouse gas emissions, and raises energy costs for residents and businesses.
+                        </li>
+                    </ul>
+                </li>
+                <li> <strong>Lack of Public Awareness</strong>
+                    <ul>
+                        <li><strong>Description: </strong> Many urban residents are not fully aware of the environmental challenges their cities face or the actions they can take to mitigate these issues.</li>
+                    </ul>
+                    <ul>
+                        <li><strong>Impact</strong> A lack of awareness leads to insufficient community involvement in sustainability initiatives, making it harder to implement effective environmental solutions.
+                        </li>
+                    </ul>
+                </li>
             </ol>
         </div>
     </section>
@@ -237,4 +285,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
