cleaning the mess

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <h1>EcoSphere: Urban Microclimate Control System</h1>
             <h2>An Innovative Approach to Urban Sustainability</h2>
-            <p>Team: Green Innovators</p>
+            <p>Team: Greennovators</p>
         </div>
     </header>
 
